--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "next": "15.0.2",
+    "next": "^15.0.4-canary.3",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
