--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.460.0",
     "next": "^15.0.4-canary.3",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
