--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "printWidth": 120,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "code": 80
 }
