# This is a combination of 3 commits. # This is the 1st commit message:
feat: add portfolio and service

# This is the commit message #2:

fix: rename title tabs

# This is the commit message #3:

Cấu hình Git LFS

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.0.3",
+    "@reach/dialog": "^0.18.0",
+    "@react-spring/web": "^9.7.5",
     "@types/lodash": "^4.17.13",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
